ESQL: dedupe cache stripe-state and entry plumbing
- ExternalStats.isStripeBookkeeping is now the single definition of
  the stripe bookkeeping key set; the resolver's plan-wire strip and
  the cache-side clears both use it (was three hand-rolled copies).
- compactCommittedStripes and the grid-mismatch reset unify into
  clearStripeState: one mechanical operation, two documented reasons.
- SchemaCacheEntry.withSafeMetadata replaces the two duplicated
  nine-field copy-constructions on the commit paths.
- The warm-fold ITs reuse the base class writeGzipped instead of
  re-implementing it.
- Debug log when a commit recovers entries from the pre-reconcile
  snapshot, so the sweep-survival path is observable in production.
- preMatched renamed preCommitSnapshot: the snapshot is path-filtered
  only; mtime/fingerprint matching happens in collectMatchingEntries.